# ifttt-lint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  action.yml  context7.json  deny.toml  license  mise.toml  readme.md
.agents/rules/: workflow.md
.agents/skills/amend/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/cook/: SKILL.md
.agents/skills/diff/: SKILL.md
.agents/skills/execute/: SKILL.md
.agents/skills/fork/: SKILL.md
.agents/skills/plan/: SKILL.md
.agents/skills/polish/: SKILL.md
.agents/skills/pr/: SKILL.md
.agents/skills/research/: SKILL.md
.agents/skills/review/: SKILL.md
.github/workflows/: ci-cd.yml
src/: changes.rs  changes_test.rs  check.rs  check_bench.rs  check_test.rs  cli.rs  cli_test.rs  git.rs  git_test.rs  grammar.pest  grammar.rs  languages.rs  lib.rs  main.rs  parser.rs  parser_test.rs  reports.rs  reports_test.rs  udiff.rs  udiff_test.rs  vcs.rs  vcs_git.rs  vcs_git_test.rs  vcs_jj.rs  vcs_jj_test.rs  vcs_mock.rs  vcs_none.rs  vcs_none_test.rs
tests/: cli.rs  smoke.rs
