[package]
name = "ifttt-lint"
version = "0.1.1"
edition = "2021"
# ErrorKind::IsADirectory stabilised in 1.83; that is the binding constraint.
rust-version = "1.83"
description = "🔗 Enforce atomic cross-file changes via `LINT.IfChange` / `LINT.ThenChange` directives."
license = "MIT"
readme = "readme.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
patch = "0.7"
pest = "2"
pest_derive = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
unindent = "0.2"
yare = "3"

[[bench]]
name = "check_bench"
path = "src/check_bench.rs"
harness = false
